@@ -1,64 +1,68 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2002/10/28 18:40:22 uebayasi Exp $
+@comment $NetBSD: PLIST,v 1.2 2002/12/31 03:27:57 uebayasi Exp $
 @unexec ${INSTALL_INFO} --delete %D/info/navi2ch.info %D/info/dir
 info/navi2ch.info
 @exec ${INSTALL_INFO} %D/info/navi2ch.info %D/info/dir
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-version.el
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-version.elc
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-vars.el
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-vars.elc
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-face.el
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-face.elc
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-util.el
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-util.elc
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-net.el
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-net.elc
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-list.el
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-list.elc
 ${EMACS_LISPPREFIX}/navi2ch/navi2ch-article.el
 ${EMACS_LISPPREFIX}/navi2ch/navi2ch-article.elc
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-popup-article.el
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-popup-article.elc
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-articles.el
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-articles.elc
 ${EMACS_LISPPREFIX}/navi2ch/navi2ch-board-misc.el
 ${EMACS_LISPPREFIX}/navi2ch/navi2ch-board-misc.elc
 ${EMACS_LISPPREFIX}/navi2ch/navi2ch-board.el
 ${EMACS_LISPPREFIX}/navi2ch/navi2ch-board.elc
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-articles.el
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-articles.elc
 ${EMACS_LISPPREFIX}/navi2ch/navi2ch-bookmark.el
 ${EMACS_LISPPREFIX}/navi2ch/navi2ch-bookmark.elc
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-history.el
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-history.elc
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-search.el
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-search.elc
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-message.el
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-message.elc
-${EMACS_LISPPREFIX}/navi2ch/navi2ch.el
-${EMACS_LISPPREFIX}/navi2ch/navi2ch.elc
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-head.el
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-head.elc
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-mona.el
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-mona.elc
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-e21.el
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-e21.elc
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-splash.el
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-splash.elc
 ${EMACS_LISPPREFIX}/navi2ch/navi2ch-directory.el
 ${EMACS_LISPPREFIX}/navi2ch/navi2ch-directory.elc
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-multibbs.el
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-multibbs.elc
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-e21.el
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-e21.elc
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-face.el
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-face.elc
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-head.el
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-head.elc
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-history.el
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-history.elc
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-http-date.el
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-http-date.elc
 ${EMACS_LISPPREFIX}/navi2ch/navi2ch-jbbs-net.el
 ${EMACS_LISPPREFIX}/navi2ch/navi2ch-jbbs-net.elc
 ${EMACS_LISPPREFIX}/navi2ch/navi2ch-jbbs-shitaraba.el
 ${EMACS_LISPPREFIX}/navi2ch/navi2ch-jbbs-shitaraba.elc
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-machibbs.el
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-machibbs.elc
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-http-date.el
-${EMACS_LISPPREFIX}/navi2ch/navi2ch-http-date.elc
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-list.el
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-list.elc
 ${EMACS_LISPPREFIX}/navi2ch/navi2ch-localfile.el
 ${EMACS_LISPPREFIX}/navi2ch/navi2ch-localfile.elc
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-machibbs.el
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-machibbs.elc
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-message.el
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-message.elc
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-mona.el
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-mona.elc
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-multibbs.el
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-multibbs.elc
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-net.el
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-net.elc
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-oyster.el
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-oyster.elc
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-popup-article.el
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-popup-article.elc
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-search.el
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-search.elc
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-splash.el
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-splash.elc
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-util.el
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-util.elc
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-vars.el
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-vars.elc
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-version.el
+${EMACS_LISPPREFIX}/navi2ch/navi2ch-version.elc
+${EMACS_LISPPREFIX}/navi2ch/navi2ch.el
+${EMACS_LISPPREFIX}/navi2ch/navi2ch.elc
+share/navi2ch/icons/navi2ch-logo.img
+share/navi2ch/icons/navi2ch-logo.xbm
+share/navi2ch/icons/navi2ch-logo.xpm
 share/navi2ch/icons/plugged.xpm
 share/navi2ch/icons/unplugged.xpm
-share/navi2ch/icons/navi2ch-logo.xpm
-share/navi2ch/icons/navi2ch-logo.xbm
-share/navi2ch/icons/navi2ch-logo.img
+@dirrm share/navi2ch/icons
+@dirrm share/navi2ch
 @dirrm ${EMACS_LISPPREFIX}/navi2ch
